@@ -1,3 +1,8 @@
+2006-12-11  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/opt.c : Undocumented -K option to explicitly keep 
+	  domain names in output labels.
+
 2006-12-10  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/pdsh/mod.c : Issue warning if module type/name is loaded
